// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Message should render default Message 1`] = `
<DocumentFragment>
  <div
    class="message"
  >
    <h2>
      There are no sneakers in your cart yet!!! )
    </h2>
    <a
      class="link"
      href="/optiCart/"
    >
      Choose 
      <span>
        YOURS!
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Component: Message should render modified Message 1`] = `
<DocumentFragment>
  <div
    class="message"
  >
    <h2>
      Test message
    </h2>
    <a
      class="link"
      href="/optiCart/"
    >
      Test 
      <span>
        Link text
      </span>
    </a>
  </div>
</DocumentFragment>
`;
